@@ -5,12 +5,7 @@ search forward/back checkbox
 
 window subclass ?
 
-plugins
-
-
 global tools
 
-
-my hilighting
 
 
